--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "test": "node ./tests/run",
-    "lint": "eslint .eslintrc.js"
+    "lint": "eslint lib"
   },
   "types": "./index.d.ts",
   "license": "MIT"
