Update examples for promised api

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Distribute processing tasks to child processes with an über-simple API and baked-in durability & custom concurrency options.",
   "version": "2.0.0",
   "engines": {
-    "node": "^12.x.x"
+    "node": "^12.22.x"
   },
   "homepage": "https://github.com/rvagg/node-worker-farm",
   "authors": [
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "test": "node ./tests/run.js",
-    "lint": "eslint lib tests"
+    "lint": "eslint lib tests examples"
   },
   "types": "./index.d.ts",
   "license": "MIT"
