--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "errno": "~0.1.7"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
     "eslint": "^7.29.0",
+    "mocha": "^9.0.1",
     "tape": "~4.10.1"
   },
   "scripts": {
