Run tests for native esm children
We've modified the tests a bit so that they are now run once for cjs and once for native esm.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "tape": "~4.10.1"
   },
   "scripts": {
-    "test": "node ./tests/run.js",
+    "test": "mocha",
     "lint": "eslint lib tests examples"
   },
   "types": "./index.d.ts",
