--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "tape": "~4.10.1"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha test/index.js",
     "lint": "eslint lib tests examples"
   },
   "types": "./index.d.ts",
