--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "worker",
     "child",
     "processing",
-    "farm"
+    "farm",
+    "threads"
   ],
   "main": "./lib/index.js",
   "exports": {
@@ -29,8 +30,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "eslint": "^7.29.0",
-    "mocha": "^9.0.1",
-    "tape": "~4.10.1"
+    "mocha": "^9.0.1"
   },
   "scripts": {
     "test": "mocha test/index.js",
